--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,64 @@
+
+
 body{
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  font-family: Arial, sans-serif; 
   background-color: #f7f7f7;
 }
 
-h1.titulo1 {
-  color: #2f4f7f;
-  text-align: center;
-  font-size: 2.5em;
-  margin-top: 20px;
+.menu{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: aquamarine;
+  align-items: center;
+
 }
 
-p.parrafo1 {
+.logo-img{
+  width: 100px;
+  height: auto;
+}
+
+.botones-menu ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.botones-menu li{
+  padding-left: 2rem;
+  background-position: 0 0;
+  background-size: 1.6rem 1.6rem;
+  background-repeat: no-repeat;
+  list-style-type: none;
+  cursor: pointer;
+}
+
+.botones-menu li:hover{
+  padding-left: 2rem;
+  background-position: 0 0;
+  background-size: 1.6rem 1.6rem;
+  background-repeat: no-repeat;
+  list-style-type: none;
+  cursor: pointer;
+  color: red;
+
+}
+
+.bloqueuno {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.titulo1 {
+  color: #2f4f7f;
+  font-size: 4em;
+}
+
+.parrafo1 {
   font-size: 1.2em;
   line-height: 1.6;
   margin: 20px auto;
@@ -21,13 +67,12 @@ p.parrafo1 {
   color:#03a9f4;
 }
 
-img.ciudad.noche {
+img.ciudad-noche {
   max-width: 600px;
   height: auto;
   display: block;
   margin: 20px auto;
 }
-
 h2.subtitulo {
   color: #2f4f7f;
   text-align: center;
